css/feedmapper.css
body {
  font-family: 'Ubuntu', sans-serif;
}

#map {
	float: right;
    margin: 1%;
    width: 50%;
    height: 500px;
}

.article-container {
  float: left;
  width: 40%;
  margin-left: 5px;
  padding: 1em;
	margin-top: 1px;
}

div.ol-attribution {
  bottom: 30px;
  right: 50px;
}

ul.inline,
ol.inline {
  margin-left: 0;
  padding-left: 0;
  list-style: none;
}

ul.inline>li,
ol.inline>li {
  display: inline-block;
  padding-left: 5px;
  padding-right: 5px;
}

.ol-attribution.ol-logo-only,
.ol-attribution.ol-uncollapsible {
  max-width: calc(100% - 3em);
  height: 1.5em;
}
.ol-attribution ul {
  font-size: 1rem;
}
.ol-control button, .ol-attribution, .ol-scale-line-inner {
  font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
}

